# rogue

./: .bandit.yaml  .dockerignore  .env.example  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKER_USAGE.md  Dockerfile  INSTALL.md  LICENSE.md  MANIFEST.in  Makefile  README.md  SECURITY.md  TESTING_GUIDE.md  TESTING_WITH_CURL.md  TUI_IMPLEMENTATION_SUMMARY.md  agen.plan.md  cli_docs.md  docker-compose.yml  hatch_build.py  install.ps1  install.sh  lefthook.yaml  parallel_evaluation_plan.md  pyproject.toml  refactor_plan.md  requirements.txt  rogue-scenario-editor-demo.mov  setup.py  spec.md  test_phase2_sdks.py  test_red_team_curl.sh  test_red_teaming_foundation.py  test_red_teaming_simple.py  test_server_red_team.sh  (+2 more)
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: blank-issue.md  config.yml
.github/actions/codestyle/: action.yml
.github/actions/prepare-pypi/: action.yml
.github/actions/publish-pypi/: action.yml
.github/actions/rogue/: action.yml
.github/actions/run-tests/: action.yml
.github/actions/tui/: action.yml
.github/actions/tui-build/: action.yml
.github/actions/tui-codestyle/: action.yml
.github/actions/uv-build/: action.yml
.github/actions/web-build/: action.yml
.github/actions/web-codestyle/: action.yml
.github/workflows/: build.yml  import-time.yml  pr.yml  release.yml  rogue.yml  test.yml
.rogue/: business_context.md  scenarios.json  user_config.json
agent_evaluator/: __init__.py  __main__.py  config.py  run_cli.py  run_ui.py
agent_evaluator/common/: __init__.py  agent_model_wrapper.py  agent_sessions.py  configure_logger.py  remote_agent_connection.py
agent_evaluator/evaluator_agent/: __init__.py  __main__.py  evaluator_agent.py  evaluator_agent_executor.py  evaluator_agent_factory.py  policy_evaluation.py  run_evaluator_agent.py  test_client.py
agent_evaluator/evaluator_agent/tools/: __init__.py  generate_report.py  get_scenarios.py  prompt_injection.py
agent_evaluator/evaluator_agent_aio/: __main__.py  evaluator_agent_executor.py
agent_evaluator/models/: __init__.py  config.py  evaluation_result.py  scenario.py  user_config.py
agent_evaluator/orchestrator_agent/: __init__.py  orchestrator_agent.py
agent_evaluator/scenario_generation_agent/: __main__.py  scenario_generation_agent.py
agent_evaluator/services/: llm_service.py  scenario_evaluation_service.py
agent_evaluator/tshirt_store_agent/: __init__.py  __main__.py  tshirt_store_agent.py  tshirt_store_agent_executor.py
agent_evaluator/ui/: __init__.py  app.py
agent_evaluator/ui/components/: __init__.py  config_screen.py  interviewer.py  report_generator.py  scenario_generator.py  scenario_runner.py
agent_evaluator/ui/config/: __init__.py
agent_evaluator/ui/models/: __init__.py  interview.py  scenario.py
agent_evaluator/ui/services/: __init__.py  llm_service.py
docs/: ATTACK_STRATEGY_INTEGRATION.md  RED_TEAM_SCENARIO_DRIVEN_PLAN.md  TESTING_ATTACK_INTEGRATION.md
docs/rogue/: architecture.mdx  cli.mdx  how-it-works.mdx  introduction.mdx  mint.json  protocols.mdx  quickstart.mdx  supported-models.mdx
docs/rogue/concepts/: ai-interviewer.mdx  attacks.mdx  evaluator-agent.mdx  frameworks.mdx  policy-evaluation.mdx  red-teaming.mdx  reporting.mdx  risk-scoring.mdx  scenario-generation.mdx  vulnerabilities.mdx
docs/rogue/examples/: tshirt-agent.mdx
docs/rogue/protocols/: a2a.mdx  mcp.mdx  python.mdx
examples/: python_entrypoint_stub.py
examples/js/cli/: package.json  pnpm-lock.yaml
examples/js/langgraph-js-example/: package.json  pnpm-lock.yaml  tsconfig.json
examples/js/openai-agents-example/: package.json  pnpm-lock.yaml  (+1 more)
examples/qualinvest_service_agent/: __init__.py  __main__.py  agent_client.py  qualinvest_service_agent.py  qualinvest_service_agent_executor.py
examples/tshirt_store_agent/: __init__.py  __main__.py  chat_ui.py  test_client.py  tshirt_store_agent.py  tshirt_store_agent_executor.py
examples/tshirt_store_langgraph_agent/: __init__.py  __main__.py  python_entrypoint_shirtify.py  requirements.txt  shirtify_langgraph_agent.py  shirtify_langgraph_agent_executor.py  tshirt_store_langgraph_agent.py
rogue/: __init__.py  __main__.py  github_action_docs.md  run_cli.py  run_server.py  run_tui.py  run_ui.py  run_web.py
rogue/common/: __init__.py  agent_model_wrapper.py  agent_sessions.py  configure_logger.py  generic_agent_executor.py  generic_task_callback.py  litellm_config.py  network.py  remote_agent_connection.py  sdk_utils.py  tui_installer.py  update_checker.py  version.py  workdir_utils.py
rogue/evaluator_agent/: __init__.py  __main__.py  base_evaluator_agent.py  evaluator_agent.py  evaluator_agent_factory.py  mcp_utils.py  policy_evaluation.py  red_team_a2a_evaluator_agent.py  red_team_mcp_evaluator_agent.py  run_evaluator_agent.py
rogue/evaluator_agent_aio/: __init__.py  evaluator_agent.py
rogue/models/: __init__.py  chat_history.py  cli_input.py  config.py  evaluation_result.py  prompt_injection.py  scenario.py  user_config.py
rogue/prompt_injection_evaluator/: __init__.py  run_prompt_injection_evaluator.py
rogue/server/: __init__.py  __main__.py  deckard_attacks.py  deckard_evaluation.py  main.py  qualifire_attacks.py  qualifire_evaluation.py
rogue/services/: __init__.py  evaluation_library.py  interviewer_service.py  llm_service.py  scenario_evaluation_service.py
rogue/tests/: test_deckard_service.py  test_deterministic_attacks.py  test_deterministic_orchestration.py  test_json_parsing_salvage.py  test_multi_turn.py  test_python_evaluator_kwargs.py  test_red_team_loop_detection.py  test_red_team_reporting.py  test_run_cli.py  test_safe_format_logging.py
rogue/ui/: __init__.py  app.py
scripts/: dev-tmux.sh  healthcheck.sh
sdks/python/: README.md  pyproject.toml
sdks/python/rogue_client/: __init__.py  client.py  sdk.py  types.py  websocket.py
sdks/python/rogue_sdk/: __init__.py  client.py  sdk.py  types.py  websocket.py
sdks/python/rogue_sdk/tests/: test_types.py
ui/: requirements.txt  run.py
ui/src/: app.py
(+202 files in other folders)
