[project]
name = "rogue"
version = "0.1.0"
description = "Rogue agent evaluator by Qualifire"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "a2a-sdk==0.2.10",
    "datasets==3.6.0",
    "fastapi>=0.115.0",
    "google-adk==1.5.0",
    "gradio==5.35.0",
    "litellm==1.71.2",
    "loguru==0.7.3",
    "pydantic==2.11.7",
    "pydantic-yaml==1.5.1",
    "python-dotenv==1.1.1",
    "rich>=14.0.0",
    "uvicorn>=0.32.0",
]

[dependency-groups]
dev = [
    "bandit==1.8.5",
    "black===25.1.0",
    "flake8==7.3.0",
    "mypy==1.16.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "types-requests>=2.32.4.20250611",
]
examples = [
    "click==8.2.1",
    "langchain==0.3.26",
    "langchain-openai==0.3.27",
    "langgraph==0.5.2",
]
