[project]
name = "rogue-ai"
version = "0.1.0"
description = "Rogue agent evaluator by Qualifire"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "a2a-sdk==0.2.10",
    "backoff>=2.2.1",
    "datasets==3.6.0",
    "fastapi>=0.115.0",
    "google-adk==1.5.0",
    "gradio==5.35.0",
    "litellm==1.76.1",
    "loguru==0.7.3",
    "pydantic==2.11.7",
    "pydantic-yaml==1.5.1",
    "python-dotenv==1.1.1",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "rogue-ai-sdk>=0.1.0",
    "uvicorn>=0.32.0",
]

[dependency-groups]
dev = [
    "bandit==1.8.5",
    "black==25.1.0",
    "flake8==7.3.0",
    "mypy==1.16.1",
    "add-trailing-comma==3.2.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "types-requests>=2.32.4.20250611",
    "pre-commit>=4.3.0",
]
examples = [
    "click==8.2.1",
    "langchain==0.3.26",
    "langchain-openai==0.3.27",
    "langgraph==0.5.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rogue"]

[tool.hatch.build.targets.wheel.sources]
"rogue" = "rogue"

[project.scripts]
rogue-ai = "rogue.__main__:main"
